Cambios en el archivo de js

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <!--script>
         console.log("Hola Igna")
     </!--script> -->
-    <script src="/js/app.js"></script>
+    <!--script src="/js/app.js"></!--script> -->
+    <script src="js/prompt.js"></script>
 </body>
 
 </html>
