--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
         console.log("Hola Igna")
     </!--script> -->
     <!--script src="/js/app.js"></!--script> -->
-    <script src="js/prompt.js"></script>
+    <!--script src="js/prompt.js"></!--script> -->
+    <script src="js/operadores.js"></script>
 </body>
 
 </html>
