--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     </!--script> -->
     <!--script src="/js/app.js"></!--script> -->
     <!--script src="js/prompt.js"></!--script> -->
-    <script src="js/operadores.js"></script>
+    <!--script src="js/operadores.js"></°script> -->
+    <script src="js/string.js"></script>
 </body>
 
 </html>
