--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <!--script src="/js/app.js"></!--script> -->
     <!--script src="js/prompt.js"></!--script> -->
     <!--script src="js/operadores.js"></°script> -->
-    <script src="js/string.js"></script>
+    <!--script src="js/string.js"></!--script> -->
+    <script src="js/condicionales.js"></script>
 </body>
 
 </html>
